# FEAST

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  example_interpolation.ipynb  pyproject.toml  requirements.txt  setup.py
docs/: simulation_pipeline_methodology.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  tutorials.rst
docs/source/_static/: custom.css
reproduction/: .gitignore
reproduction/1_Simulator_benchmark/: ParameterCloud_sim.py
reproduction/2_Clustering_simulation/: grad_run_simulation.py
reproduction/3_Alignment_simulation/: run_alignment_sim.py
reproduction/3_Alignment_simulation/alignment_rerun_20260614/: simulation_manifest.csv
reproduction/4_Deconvolution_simulation/: run_deconvolution.py
reproduction/6_Simulation_3D_Tissue/: cross_density_summary.csv  run_3d_stack_experiment.py
reproduction/6_Simulation_3D_Tissue/dense_gap3/: metadata.json  real_z_coherence_split_half.csv  real_z_coherence_split_half_summary.json  stack_summary.json  summary.csv  summary_z_regularized.csv  z_coherence_metrics.csv  z_coherence_metrics_z_regularized.csv
reproduction/6_Simulation_3D_Tissue/medium_gap5/: metadata.json  real_z_coherence_split_half.csv  stack_summary.json  (+5 more)
src/FEAST/: __init__.py  spatial_transform.py
tests/: test_core_simulator.py  test_count_decoding.py  test_de_novo_blueprint.py  test_de_novo_conditional_generation.py  test_de_novo_design_generation.py  test_de_novo_patterns.py  test_imports.py  test_marginal_alteration.py  test_package_no_interpolation.py  test_quantile_field.py  test_simulation_modes.py
(+779 files in other folders)
