[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FEAST-py"
version = "1.0.2"
description = "Spatial Transcriptomics Simulator"
readme = "README.md"
authors = [
    {name = "Yiru CHEN", email = "yiru.22@intl.zju.edu.cn"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alphashape>=1.3.1",
    "anndata>=0.10.8,<0.13",
    "joblib>=1.4.2",
    "matplotlib>=3.8,<4",
    "numpy>=1.24,<2",
    "pandas>=2.0.3,<3",
    "POT>=0.9.4",
    "scanpy>=1.10,<1.12",
    "scikit-learn>=1.3,<2",
    "scipy>=1.10,<2",
    "seaborn>=0.13.2",
    "torch>=2.1,<3",
    "tqdm>=4.66.4",
    "pydot>=4.0.1",
    "pyvinecopulib>=0.7.3,<1.12",
    "thin-plate-spline>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
